--- a/css/styles.css
+++ b/css/styles.css
@@ -396,7 +396,45 @@ line-height: 1.3;
 
  /*contacto*/
 
+ form p {
+     font-size: 1.2rem;
+     color: #4b4949
+
+ }
+
+ legend {
+     font-size: 1.5rem;
+     color: #494848;
+ }
  label {
+     font-weight: 700;
+     text-transform: uppercase;
      display:block;
-     
+     font-size: 1.3rem;
+ }
+
+ input:not([type="submit"]),
+ textarea,
+ select {
+     padding: .5rem;
+     display: block;
+     width: 95%;
+     background-color: #e1e1e1;
+     margin-bottom: 2rem; 
+     border: none;
+     border-radius: 1rem;
+ }
+
+ select {
+     appearance: none;
+ }
+
+ textarea {
+     height: 20rem;
+ }
+
+ .forma-contacto {
+     max-width: 600px;
+     display: flex;
+     justify-content: space-between;
  }
