--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,11 @@ p {
     display: inline-block;
     margin-top: 0.8rem;
     text-align: center;
+    border: none;
+}
+
+.boton:hover {
+    cursor: pointer;
 }
 
 .boton-amarillo{
@@ -398,19 +403,23 @@ line-height: 1.3;
 
  form p {
      font-size: 1.2rem;
-     color: #4b4949
+     color: hsl(0, 1%, 29%);
+     margin: 2rem 0 1rem 0;
 
  }
 
  legend {
      font-size: 1.5rem;
      color: #494848;
+     margin-bottom: 1rem;
  }
  label {
      font-weight: 700;
      text-transform: uppercase;
      display:block;
      font-size: 1.3rem;
+     margin-bottom: 1rem;
+    
  }
 
  input:not([type="submit"]),
@@ -425,6 +434,12 @@ line-height: 1.3;
      border-radius: 1rem;
  }
 
+ input[type="radio"]{
+     width: auto;
+     margin: 0;
+     
+
+ }
  select {
      appearance: none;
  }
@@ -434,7 +449,8 @@ line-height: 1.3;
  }
 
  .forma-contacto {
-     max-width: 600px;
+     max-width: 30rem;
      display: flex;
      justify-content: space-between;
+     align-items: center;
  }
